--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -19,3 +19,24 @@
     display: inline-block;
     cursor: grab;
 }
+
+#app {
+    font-family: Avenir, Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: #2c3e50;
+}
+
+.card-holder {
+    overflow-x: scroll;
+}
+
+.card-holder::-webkit-scrollbar {
+    display: none;
+}
+
+.card {
+    min-height: 300px;
+    min-width: 300px !important;
+    margin-right: 5px;
+}
