Enlarged task lists on x-axis

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -33,11 +33,13 @@
 .card {
     min-height: 300px;
     min-width: 300px !important;
+    width: 24vw !important;
+    flex-shrink: 0; /* <-- P.I.T.A. */
     margin-right: 5px;
 }
 
 .list-group.list-group-flush {
-    max-height: 20vh;
+    max-height: 25vh;
     overflow-y: scroll;
 }
 
